--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will download a prebuilt Ruby version, install dependencies and run tests with Rake
-# For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
-
-name: CI
+name: Test & deploy documentation
 
 on:
   push:
@@ -29,3 +22,22 @@ jobs:
         bundler-cache: true
     - name: Run tests
       run: bundle exec rake
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    name: Update gh-pages to docs
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+      - name: Install required gem dependencies
+        run: gem install yard --no-document
+      - name: Build YARD Ruby Documentation
+        run: yardoc --output-dir docs
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_dir: ./docs
