--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         ruby-version: ['2.7', '3.0', '3.1', '3.2', '3.3', '3.4']
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
@@ -29,13 +29,21 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     name: Update gh-pages to docs
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
           bundler-cache: true
+      - name: Cache YARD gems
+        uses: actions/cache@v3
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-yard-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yard-gems-
       - name: Install required gem dependencies
-        run: gem install yard redcarpet github-markup --no-document
+        run: |
+          gem install yard redcarpet github-markup --no-document
       - name: Build YARD Ruby Documentation
         run: yardoc --output-dir docs
       - name: Deploy
